--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -96,5 +96,19 @@
 }
 
 @media (max-width: 768px) {
+    .greeting{
+        font-size: 6vw;
+        
+    }
 
+    .heading{
+        font-size: 5vw; 
+    }
+
+    .btn-white {
+        
+        font-size:4vw ;
+        
+    }
+    
 }
